<resources>
    <string name="app_name">Quest</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="signup">signup</string>
    <string name="inside_home_activity">This is the Home Activity</string>
    <string name="submit">SUBMIT</string>
    <string name="back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment.</string>
    <string name="search_fragment">This is the search fragment.</string>
    <string name="subjects_fragment">This is the subjects fragment.</string>
    <string name="recent_questions_fragment">This is the recent questions fragment.</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="subjects">Subjects</string>
    <string name="logout">Log Out</string>
    <string name="new_subject">NEW SUBJECT</string>
    <string name="subject_hint">e.g. ENGL 1101</string>
    <string name="create">CREATE</string>
    <string name="cancel">Cancel</string>
    <string name="new_section">NEW SECTION</string>
    <string name="new_page">NEW PAGE</string>
    <string name="section_hint">e.g. Unit 1: Introduction</string>
    <string name="page_hint">e.g. 1.1 Vector Equations</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please Wait</string>
    <string name="enter_new_name">New name…</string>
    <string name="new_question">+ NEW Q</string>
    <string name="new_question_and_answer">+ NEW Q&amp;A</string>
    <string name="add_answer">Add answer here (optional…)</string>
    <string name="add_question">Add question here (required…)</string>
    <string name="collapsable">Collapsable</string>
    <string name="search_hint">Search questions…</string>
    <string name="export">Export as PDF</string>
    <string name="file_name">Enter File Name (do not include .pdf)</string>
    <string name="select">Select</string>
    <string name="sections">Sections</string>
    <string name="pages">Pages</string>
    <string name="mind_map">Mind Map</string>
</resources>