<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/horizontal_dialog_margin"
    android:layout_marginVertical="@dimen/vertical_dialog_margin"
    android:layout_centerInParent="true"
    android:background="@drawable/progress_bar_background">

    <TextView
        android:id="@+id/tvEditCategoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/edit"
        android:textStyle="bold"
        android:textSize="@dimen/medium_text" />

    <EditText
        android:id="@+id/etEditCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_between_views"
        android:layout_below="@id/tvEditCategoryTitle"
        android:hint="@string/enter_new_name"
        android:inputType="text"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btnEditCategorySubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEditCategory"
        android:text="@string/submit" />

</RelativeLayout>