<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etUsernameSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_edge_margin"
        android:layout_marginStart="@dimen/horizontal_edge_margin"
        android:layout_marginEnd="@dimen/horizontal_edge_margin"
        android:inputType="text"
        android:autofillHints="false"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/etPasswordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsernameSignup"
        android:layout_marginTop="@dimen/distance_between_views"
        android:layout_marginStart="@dimen/horizontal_edge_margin"
        android:layout_marginEnd="@dimen/horizontal_edge_margin"
        android:inputType="textPassword"
        android:autofillHints="false"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btnSubmitSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPasswordSignup"
        android:layout_marginTop="@dimen/distance_between_views"
        android:layout_marginStart="@dimen/horizontal_edge_margin"
        android:layout_marginEnd="@dimen/horizontal_edge_margin"
        android:text="@string/signup"/>

</RelativeLayout>